@@ -58,13 +58,10 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
-<!--                    <configuration>-->
-<!--                        <testFailureIgnore>true</testFailureIgnore>-->
-<!--                    </configuration>-->
+                    <version>3.0.0-M5</version>
                     <configuration>
-                        <argLine>--add-opens securitymodule/security.service=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens securitymodule/image.service=ALL-UNNAMED</argLine>
+<!--                        <argLine>&#45;&#45;add-opens security/security.service=ALL-UNNAMED</argLine>-->
+                        <useModulePath>false</useModulePath>
                     </configuration>
                 </plugin>
                 <plugin>
